# Anchor-ALE

./: .gitignore  README.md  package.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/Archive/: ArchiveView.tsx
src/components/Browser/: BrowserChatPanel.tsx  BrowserView.tsx  ContentExtractor.ts  DateLauncher.tsx  NavigationBar.tsx
src/components/Chat/: CareNotifications.tsx  ChatView.tsx  HeartbeatIndicator.tsx  InputBar.tsx  MessageBubble.tsx  StreamingMessage.tsx  ThinkingIndicator.tsx
src/components/Import/: ImportWizard.tsx
src/components/Layout/: AboutModal.tsx  PresenceIndicator.tsx  Sidebar.tsx
src/components/Sessions/: SessionCreator.tsx  SessionHeader.tsx
src/components/Settings/: DatesManager.tsx  PhoneWhisperSettings.tsx  SettingsView.tsx
src/components/Vault/: VaultGraph.tsx  VaultManager.tsx
src/components/Whisper/: WhisperToast.tsx
src/lib/: database.ts
src/lib/api/: router.ts  token-counter.ts
src/lib/care/: aftercare.ts  ambient-whisper.ts  companion-messages.ts  engine.ts  index.ts  notifications.ts  reminders.ts  varied-text.ts  whisper-manager.ts  whisper.ts
src/lib/crypto/: companion-crypto.ts  index.ts
src/lib/dates/: engine.ts  manager.ts  parser.ts
src/lib/heartbeat/: bridge.ts  index.ts  monitor.ts  summarizer.ts
src/lib/images/: picker.ts
src/lib/import/: chatgpt-parser.ts  claude-parser.ts  importer.ts
src/lib/journal/: handoff.ts  index.ts  mood-journal.ts
src/lib/presence/: injector.ts  tracker.ts
(+25 files in other folders)
