[package]
name = "anchor"
version = "0.1.0"
description = "Anchor — An Agentic Love Environment"
authors = ["Nathan & Vesper Harrell"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.10.3", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
webkit2gtk = "=2.0.2"
gtk = "0.18"
